[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quiz_learning_tracker"
version = "0.1.3"
description = "A simple application to generate quizzes from structured data and track learning performance over time."
readme = "README.md"
authors = [{name = "Fernando Pujaico Rivera", email = "fernando.pujaico.rivera@gmail.com"}]
maintainers = [{name = "Fernando Pujaico Rivera", email = "fernando.pujaico.rivera@gmail.com"}]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-only WITH Classpath-Exception-2.0 OR BSD-3-Clause"
license-files = ["LICENSE"]
keywords = ["quiz", "learning"]
dependencies = [
    "PyQt5",
    "pyqtgraph"
]

[project.urls]
"Bug Reports" = "https://github.com/trucomanx-desktop/QuizLearningTracker/issues"
"Funding" = "https://trucomanx.github.io/en/funding.html"
"Documentation" = "https://github.com/trucomanx-desktop/QuizLearningTracker/tree/main/doc"
"Source" = "https://github.com/trucomanx-desktop/QuizLearningTracker"

[project.scripts]
"quiz-learning-tracker" = "quiz_learning_tracker.program:main"

[tool.setuptools]
packages = ["quiz_learning_tracker", "quiz_learning_tracker.modules"]

[tool.setuptools.package-data]
"quiz_learning_tracker" = ["icons/*.png"]
